--- a/brigadeiria/produtos/templates/cardapio.html
+++ b/brigadeiria/produtos/templates/cardapio.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/cardapio.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/descricao.css' %}" />
+  <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
 
