--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -144,5 +144,6 @@
   <script src="{% static 'JS/search.js' %}"></script>
   <script src="{% static 'JS/carrossel.js' %}"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 </html>
