--- a/brigadeiria/produtos/templates/carrinho.html
+++ b/brigadeiria/produtos/templates/carrinho.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{% static 'CSS/base.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/carrinho.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}" />
+  <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 
 <body>
