--- a/brigadeiria/produtos/templates/produto_detalhe.html
+++ b/brigadeiria/produtos/templates/produto_detalhe.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{% static 'CSS/base.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/produto_detalhe.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Voces&display=swap" rel="stylesheet">
+  <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 </head>
 <body>
 
