--- a/brigadeiria/produtos/static/CSS/search.css
+++ b/brigadeiria/produtos/static/CSS/search.css
@@ -22,13 +22,13 @@
 /* SEARCH BAR */
 /* Remove o fundo branco padrão do input[type=search] nos navegadores */
 input[type="search"] {
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: transparent !important;
-  border: none !important;
-  outline: none !important;
-  box-shadow: none !important;
-  color: #f7e7cf;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #5c3b1e !important; /* marrom */
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+    color: #f7e7bc; /* amarelo clarinho */
 }
 
 /* Ícone */
@@ -40,16 +40,18 @@ input[type="search"] {
 
 /* Input */
 .searchInput {
-  flex: 1;
-  border: none;
-  outline: none;
-  background: rgba(0, 0, 0, 0);
-  font-size: 1rem;
-  color: #f7e7cf; /* MESMA cor da Home */
+    flex: 1;
+    border: none;
+    outline: none;
+    background: #5c3b1e; /* marrom */
+    color: #f7e7bc;     /* amarelo clarinho */
+    font-size: 1rem;
 }
 
+/* Placeholder */
 .searchInput::placeholder {
-  color: #5c3b1e; 
+    color: #f7e7bc; /* amarelo clarinho */
+    opacity: 0.7;
 }
 
 /* Caixa de resultados */
