--- a/brigadeiria/produtos/templates/blank.html
+++ b/brigadeiria/produtos/templates/blank.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- CSS de alertas -->
+    <link rel="stylesheet" href="{% static 'CSS/alerta.css' %}">
 
     {% block head %}{% endblock %}
 </head>
 
 <body style="background:#f9eee0; font-family: 'Voces', sans-serif;">
     {% block content %}{% endblock %}
+
 </body>
 </html>
